--- a/client/src/useredit.scss
+++ b/client/src/useredit.scss
@@ -99,7 +99,7 @@ input.radio {
   margin-right: 5px;
   background-color: white;
   position: relative;
-  top: 0.32rem;
+  top: 0.17rem;
   outline: none;
 }
 
